<resources>
    <string name="app_name">Giuaky</string>
    <string name="add">Add</string>
    <string name="tv_name">Tên</string>
    <string name="tv_age">Tuổi</string>
    <string name="tv_address">Địa chỉ</string>
    <string name="tv_phone">Số điện thoại</string>
    <string name="btn_create">Tạo</string>
    <string name="tv_add_list">Tạo danh sách</string>
    <string name="tv_edit_list">Chỉnh sửa danh sách</string>
</resources>